--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,8 @@
     "react-chartjs-2": "^5.2.0",
     "react-icons": "^5.0.1",
     "react-loading-icons": "^1.1.0",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
